--- a/_posts/2015-02-06-Manjaro-0.8.12-lancado.md
+++ b/_posts/2015-02-06-Manjaro-0.8.12-lancado.md
@@ -22,4 +22,4 @@ A Equipe Manjaro.
 
 * [Baixar versão XFCE](https://sourceforge.net/projects/manjarolinux/files/release/0.8.12/xfce/)
 * [Baixar versão KDE](https://sourceforge.net/projects/manjarolinux/files/release/0.8.12/kde/)
-* [Download versão Netinstall](https://sourceforge.net/projects/manjarolinux/files/release/0.8.12/netinstall/)
+* [Baixar versão Netinstall](https://sourceforge.net/projects/manjarolinux/files/release/0.8.12/netinstall/)
