--- a/_posts/2015-01-31-Calamares-1.0-lancado.md
+++ b/_posts/2015-01-31-Calamares-1.0-lancado.md
@@ -5,27 +5,19 @@ title: Calamares 1.0 lançado
 
 <img src="{{ site.baseurl }}/images/calamares-1.0.jpg">
 
-The [Calamares](http://calamares.io/) team and [Blue Systems](http://www.blue-systems.com/) are proud to announce the immediate availability of **Calamares 1.0**.
+A equipe do [Calamares](http://calamares.io/) e a [Blue Systems](http://www.blue-systems.com/) tem o prazer de anunciar a disponibilidade do **Calamares 1.0**.
 
-Calamares is a distribution independent installer framework. The initial idea for Calamares popped up in May 2014, less than a year ago, and out of frustration: many successful independent Linux distributions came with lackluster installers, and all of these installers were a result of competition rather than cooperation. Improving one of the existing installers wouldn't have fixed this, as every installer was more or less distribution specific. We wanted to create a product that would satisfy the requirements of most Linux distributions, developed as an upstream project for all of them.
+Calamares é um framework independente para construção de instaladores. A ideia inicial do Calamares surgiu em maio de 2014, menos de um ano atrás, e por causa da frustração: muitas distribuições Linux de sucesso vem com seus próprios instaladores e sem brilho algum, e tudo isso é resultado da competição ao invés da cooperação. Melhorar um dos instaladores existentes não resolveria isso porque os instaladores eram específicos para a distribuição em si. Queremos criar um produto que satisfaça os requisitos da maioria das distribuições Linux, e desenvolve-lo como um projeto upstream para atender todos eles.
 
-With support from Blue Systems, we started from scratch around June 2014, with a highly **modular design** and some valuable contributions from [KaOS](http://kaosx.us/), [Manjaro](http://manjaro.org/), [Maui](http://www.maui-project.org/) and [Netrunner](http://www.netrunner-os.com/) developers. Contributors from [Fedora](https://getfedora.org/), [BBQLinux](http://bbqlinux.org/), [OpenMandriva](https://openmandriva.org/) and the [KDE Visual Design Group](https://vdesign.kde.org/) joined in afterwards.
+Com o apoio da Blue Systems, iniciamos do zero em torno de junho de 2014, com um **design altamente modular** e com o apoio de desenvolvedores dos projetos [KaOS](http://kaosx.us/), [Manjaro](http://manjaro.org/), [Maui](http://www.maui-project.org/) e [Netrunner](http://www.netrunner-os.com/). Além de contribuições dos projetos [Fedora](https://getfedora.org/), [BBQLinux](http://bbqlinux.org/), [OpenMandriva](https://openmandriva.org/) e do grupo de Design do KDE que se juntou ao grupo posteriormente.
 
-Now, a little over half a year of design and development frenzy later, we choose to call it 1.0. While there is still room for improvement, we have decided that the first development iteration is done, and we are presenting a modest yet feature-complete product.
+Agora, com poucos meses de projeto e de muito desenvolvimento, optamos por chama-lo de 1.0. Enquanto ainda há espaço para melhorias, nós decidimos que a primeira iteração de desenvolvimento está pronta, e estamos apresentando um produto modesto mas com recursos completos.
 
-Feature highlights include:
-
-* a completely modular design, with three **plugin interfaces**: C++, Python and generic process;
-* a threaded **job executor**, with C++ and Python API;
-* a collection of over 25 **modules**, ranging from boot loader support to partitioning, to user management and much more, with the opportunity of deploying your own;
-* a self-contained **branding** component mechanism, which allows distributions to ship a consistent user experience without patching;
-* an advanced **partitioning** tool, with automation and resize functionality and both DOS and GPT partition table support.
-
-While Calamares 1.0 is production ready, it does have [known](http://calamares.io/bugs/) and unknown bugs. If you are a distribution maintainer and wish to deploy Calamares as your distribution's installer, feel free to join **#calamares on Freenode** and we would be happy to help you get started.
+Apesar do Calamares 1.0 está pronto para produção, ele tem [bugs conhecidos](http://calamares.io/bugs/) e desconhecidos. Se você é um mantenedor de distribuição e deseja implantar o Calamares como instalador da sua distribuição, sinta-se livre para se juntar ao ** #calamares ** na rede Freenode pois ficaríamos muito felizes em ajudá-lo.
 
 ----
 
 ##Links
 
-* [Download here](http://sourceforge.net/projects/manjarotest/files/0.9.0/xfce-minimal/0.9.0-dev/)
-* [Forum post](https://forum.manjaro.org/index.php?topic=16191.0)
+* [Baixar versão de teste](http://sourceforge.net/projects/manjarotest/files/0.9.0/xfce-minimal/0.9.0-dev/)
+* [Discussão no Fórum (inglês)](https://forum.manjaro.org/index.php?topic=16191.0)
