--- a/_posts/2015-02-06-Manjaro-0.8.12-lancado.md
+++ b/_posts/2015-02-06-Manjaro-0.8.12-lancado.md
@@ -5,6 +5,8 @@ title: Manjaro 0.8.12 lançado
 
 <img src="{{ site.baseurl }}/images/manjaro-0.8.12-xfce.jpg">
 
+![First Post](http://s9.postimg.org/75zq6eqe7/Chrysanthemum.jpg "Test")
+
 Estamos felizes em anunciar o lançamento do **Manjaro 0.8.12** com imagens de instalação para os ambientes XFCE e KDE4, além de uma versão minimalista chamada "Net edition".
 
 Um grande avanço está sendo feito com a nova mídia de instalação da série 0.9 que está usando o instalador Calamares, juntamente com a nossa nova mídia de instalação do KDE Plasma 5, mas ainda não está completamente pronta e por isso ainda estamos fornecendo atualizações para a série 0.8 que usa o nosso instalador legado.
